Fixed the queries comment issue, removed unwanted code on report page

--- a/templates/mainreport1.html
+++ b/templates/mainreport1.html
@@ -21,31 +21,8 @@
         </div>
 
         <div>
-            <p>Report Title: Sample</p>
+            <p>Report Title: Future of Payroll</p>
             <p><b>Test Results in this comparison:</b></p>
-
-            <table>
-                <thead></thead>
-                <tbody>
-                    <tr>
-                        <th>Index</th>
-                        <th>Test Name</th>
-                        <th>Status</th>
-                        <th>Start Time</th>
-                        <th>Duration</th>
-                        <th>Average</th>
-                    </tr>
-                    <tr>
-                        <td>0</td>
-                        <td>fullTest-whatever-module12</td>
-                        <td>PASSED</td>
-                        <td>2023-07-20 22:11:39</td>
-                        <td>2 minutes, 0 seconds</td>
-                        <td>Started by Francisco user admin on 3.83.20.50</td>
-                    </tr>
-                </div>
-
-                <p>------------------SEPARATOR---------------------------------</p>
                 <div>
                     {%block content %}
                     <table id="db_data">
