--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,7 +1,13 @@
 <!doctype html>
-    <title>Upload new File</title>
-    <h1>Upload new File</h1>
-    <form method=post action="#" enctype=multipart/form-data>
-      <input type=file name=file>
-      <input type=submit value=Upload>
+<html>
+  <head>
+    <title>File Upload</title>
+  </head>
+  <body>
+    <h1>File Upload</h1>
+    <form method="POST" action="" enctype="multipart/form-data">
+      <p><input type="file" name="file"></p>
+      <p><input type="submit" value="Submit"></p>
     </form>
+  </body>
+</html>
