--- a/templates/upload.html
+++ b/templates/upload.html
@@ -5,8 +5,9 @@
   </head>
   <body>
     <h1>File Upload</h1>
-    <form method="POST" action="" enctype="multipart/form-data">
-      <p><input type="file" name="file"></p>
+    <form method="post" action="" enctype="multipart/form-data">
+      <p><input type="file" name="upload_file"></p>
+      <p><input type="text" name="team_name"></p>
       <p><input type="submit" value="Submit"></p>
     </form>
   </body>
