Fix db call to include table name, remove radio and input fields

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -7,11 +7,11 @@
     <h1>File Upload</h1>
     <form method="post" action="" enctype="multipart/form-data">
       <p><input type="file" name="upload_file"></p>
-      <label for="team_name">Enter team name</label>
-      <p><input type="text" name="team_name"></p>
+      <!-- <label for="team_name">Enter team name</label>
+      <p><input type="text" name="team_name"></p> -->
 
       <h4>Choose Pre Prod Environment</h4>
-                    <div>
+                    <!-- <div>
                         <input type="radio" id="dev" value="dev" name="env" />
                         <label for=""dev>DEV</label>
                         <input type="radio" id="test" value="test" name="env" />
@@ -20,7 +20,7 @@
                         <label for=""dev>Stage</label>
                         <input type="radio" id="local" value="local" name="env" />
                         <label for=""dev>Local</label>
-                    </div>
+                    </div> -->
 
 
       <p><input type="submit" value="Submit"></p>
