Add the 90th percentile, add environment on the upload page, setup link header page

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -11,16 +11,18 @@
       <p><input type="text" name="team_name"></p> -->
 
       <h4>Choose Pre Prod Environment</h4>
-                    <!-- <div>
-                        <input type="radio" id="dev" value="dev" name="env" />
-                        <label for=""dev>DEV</label>
+                    <div>
+                        <!-- <input type="radio" id="dev" value="dev" name="env" />
+                        <label for=""dev>Dev</label>
                         <input type="radio" id="test" value="test" name="env" />
                         <label for=""dev>Test</label>
                         <input type="radio" id="stage" value="stage" name="env" />
                         <label for=""dev>Stage</label>
                         <input type="radio" id="local" value="local" name="env" />
-                        <label for=""dev>Local</label>
-                    </div> -->
+                        <label for=""dev>Local</label> -->
+                        <input type="radio" id="local" value="testing" name="env" />
+                        <label for=""dev>Testing</label>
+                    </div>
 
 
       <p><input type="submit" value="Submit"></p>
