--- a/templates/teamresults.html
+++ b/templates/teamresults.html
@@ -1,6 +1,6 @@
 
 {% block head %}
-<title id="team">{{team_name}}</title>
+<title id="team">Test Results</title>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <!-- <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='styles/stylesheet.css') }}" media="screen" /> -->
 
@@ -8,51 +8,76 @@
 
 {% block body %}
 
-<h1>Test Runs</h1>
-
 <div>
-    <select name="test_runs" id="test_run">
-        {% for key,value in testrun.iterrows() %}
-        <option value="{{value[0]}}">{{value[0]}}</option>
-        {% endfor %}
+    <h4>Select Environment</h4>
+    <select id="environments" name="_environments">
+        <!-- <option value="dev" >Dev</option> -->
+        <!-- <option value="test" name="env">Test</option>
+        <option value="stage" name="env">Stage</option> -->
+        <option value="testing">Testing</option>
     </select>
-    <button class="updateButton" onclick="showUpdateButton2()">Search Test Runs</button>
+    <button type="submit" id="envButton" class="envbutton" onclick="showtestrunButton()">Connect</button>
 </div>
-<!-- <button class="clearButton" onclick="">Clear filter</button> -->
-<br />
-<br />
+
+<!-- RUNS -->
 <div>
+    <div id="testrun">
+
+    </div>
+    <div>
+        <button class="testrunButton" id="testrunBUTTON" style="display:none" onclick="showUpdateButton2()">Search Test Runs</button>
+    </div>
+</div>
+
 <!-- SCENARIOS -->
 <div id="data">
+
 </div>
-<button id="updatebutton2" class="updateButton2" onclick="showreportbutton()" style="display:none">Search Scenarios</button>
+<button id="scenarioButton" class="updateButton2" onclick="showreportbutton()" style="display:none">Search Scenarios</button>
 </div>
 <br />
 <div>
-<button id="generatereportbutton" class="generateReportbutton" style="display:none">Generate Report</button>
+    <!-- <button id="generatereportbutton" class="generateReportbutton" style="display:none">Generate Report</button> -->
 </div>
-
+<!-- SCENARIO DATA -->
 <div id="scenariodata">
 </div>
 
 <br />
-<!-- TABLE DATA -->
-<div id="trdata">
 
-</div>
-
- 
+<!-- GET TEST RUns -->
 <script>
     $(document).ready(function () {
-        $('.updateButton').on('click', function () {
-
-             var test_run = $('#test_run').val();
-            var team = $('#team').text();
+        $('#envButton').on('click', function () {
+            var environment = $('#environments').val();
 
             req = $.ajax({
-                type: 'get',
+                type: 'post',
+                url: '/testruns',
+                data: { env: environment },
+                success: function (response) {
+                    $('#testrun').fadeOut(1).fadeIn(1500);
+                    $('#testrun').html(response);
+                },
+                error: function (response) {
+                    console.log(response);
+                },
+            });
+        });
+    });
+</script>
+
+<!-- GET SCENARIOS RUNS -->
+<script>
+    $(document).ready(function () {
+        $('.testrunButton').on('click', function () {
+            var test_run = $('#test_run').val();
+            var environment = $('#environments').val();
+
+            req = $.ajax({
+                type: 'post',
                 url: '/getscenarios',
-                data: { test_runs: test_run },
+                data: { test_runs: test_run, env: environment },
                 success: function (response) {
                     $('#data').fadeOut(1).fadeIn(1500);
                     $('#data').html(response);
@@ -64,18 +89,19 @@
         });
     });
 </script>
+<!-- GET SCENARIOS DATA -->
 <script>
     $(document).ready(function () {
-        $('.updateButton2').on('click', function () {
+        $('#scenarioButton').on('click', function () {
 
             var scenarioElement = $('#allscenarios').val();
             var test_run = $('#test_run').val();
-            
+            var environment = $('#environments').val();
 
             req = $.ajax({
-                type: 'get',
+                type: 'post',
                 url: '/scenariodata',
-                data: { test_runs: test_run, scenario: scenarioElement },
+                data: { test_runs: test_run, scenario: scenarioElement, env: environment },
                 success: function (response) {
                     $('#scenariodata').fadeOut(1).fadeIn(1500);
                     //console.log(response);
@@ -88,21 +114,26 @@
         });
     });
 </script>
+<script>
+    function showtestrunButton() {
+        var y = document.getElementById('testrunBUTTON');
+        // y.style.display = "inline";
+        $('#testrunBUTTON').fadeOut(1).fadeIn(1500);
+    }
+</script>
 
 <script>
     function showUpdateButton2() {
-        var y = document.getElementById('updatebutton2');
+        var y = document.getElementById('scenarioButton');
         y.style.display = "inline";
-        $('#updatebutton2').fadeOut(100).fadeIn(2000);
+        $('#scenarioButton').fadeOut(1).fadeIn(1500);
     }
-    
 </script>
-<script>
+<!-- <script>
     function showreportbutton(){
         var z = document.getElementById('generatereportbutton');
         z.style.display = "inline";
-        $('#generatereportbutton').fadeout(100).fadeIn(2000)
+        $('#generatereportbutton').fadeOut(100).fadeIn(2000)
     }
-</script>
+</script> -->
 {% endblock %}
-
