Clean up team calls, add uploads folder

--- a/templates/mainreport1.html
+++ b/templates/mainreport1.html
@@ -35,7 +35,7 @@
                         </tr>
                         <tbody>
                             <tr>
-                                {% for key,value in thedata.iterrows() %}
+                                {% for key,value in data.iterrows() %}
                                 <td>{{value[0]}}</td>
                                 <td>{{value[1]}}</td>
                                 <td>{{value[2]}}</td>
